--- a/resources/metadata/abapEnvironmentPullGitRepo.yaml
+++ b/resources/metadata/abapEnvironmentPullGitRepo.yaml
@@ -52,7 +52,14 @@ spec:
           - PARAMETERS
           - STAGES
           - STEPS
-        mandatory: true
+      - name: repositories
+        type: string
+        description: Specifies a YAML file containing the repositories configuration
+        scope:
+          - GENERAL
+          - PARAMETERS
+          - STAGES
+          - STEPS
       - name: host
         type: string
         description: Specifies the host address of the SAP Cloud Platform ABAP Environment system
