--- a/resources/metadata/cloudFoundryCreateService.yaml
+++ b/resources/metadata/cloudFoundryCreateService.yaml
@@ -48,8 +48,9 @@ spec:
             param: username
           - type: vaultSecret
             paths:
-              - $(vaultBasePath)/$(vaultPipelineName)/cloudfoundry-$(org)-$(space)
-              - $(vaultBasePath)/__group/cloudfoundry-$(org)-$(space)
+              - $(vaultCustomBasePath)/cloudfoundry-$(cfOrg)-$(cfSpace)
+              - $(vaultBasePath)/$(vaultPipelineName)/cloudfoundry-$(cfOrg)-$(cfSpace)
+              - $(vaultBasePath)/__group/cloudfoundry-$(cfOrg)-$(cfSpace)
       - name: password
         type: string
         description: Password for Cloud Foundry User
@@ -65,8 +66,9 @@ spec:
             param: password
           - type: vaultSecret
             paths:
-              - $(vaultBasePath)/$(vaultPipelineName)/cloudfoundry-$(org)-$(space)
-              - $(vaultBasePath)/__group/cloudfoundry-$(org)-$(space)
+              - $(vaultCustomBasePath)/cloudfoundry-$(cfOrg)-$(cfSpace)
+              - $(vaultBasePath)/$(vaultPipelineName)/cloudfoundry-$(cfOrg)-$(cfSpace)
+              - $(vaultBasePath)/__group/cloudfoundry-$(cfOrg)-$(cfSpace)
       - name: cfOrg
         type: string
         description: Cloud Foundry org
