--- a/resources/metadata/cloudFoundryCreateService.yaml
+++ b/resources/metadata/cloudFoundryCreateService.yaml
@@ -48,7 +48,7 @@ spec:
             param: username
           - type: vaultSecret
             paths:
-              - $(vaultCustomBasePath)/cloudfoundry-$(cfOrg)-$(cfSpace)
+              - $(vaultPath)/cloudfoundry-$(cfOrg)-$(cfSpace)
               - $(vaultBasePath)/$(vaultPipelineName)/cloudfoundry-$(cfOrg)-$(cfSpace)
               - $(vaultBasePath)/__group/cloudfoundry-$(cfOrg)-$(cfSpace)
       - name: password
@@ -66,7 +66,7 @@ spec:
             param: password
           - type: vaultSecret
             paths:
-              - $(vaultCustomBasePath)/cloudfoundry-$(cfOrg)-$(cfSpace)
+              - $(vaultPath)/cloudfoundry-$(cfOrg)-$(cfSpace)
               - $(vaultBasePath)/$(vaultPipelineName)/cloudfoundry-$(cfOrg)-$(cfSpace)
               - $(vaultBasePath)/__group/cloudfoundry-$(cfOrg)-$(cfSpace)
       - name: cfOrg
