--- a/resources/metadata/cloudFoundryDeleteService.yaml
+++ b/resources/metadata/cloudFoundryDeleteService.yaml
@@ -36,7 +36,7 @@ spec:
             param: username
           - type: vaultSecret
             paths:
-              - $(vaultCustomBasePath)/cloudfoundry-$(cfOrg)-$(cfSpace)
+              - $(vaultPath)/cloudfoundry-$(cfOrg)-$(cfSpace)
               - $(vaultBasePath)/$(vaultPipelineName)/cloudfoundry-$(cfOrg)-$(cfSpace)
               - $(vaultBasePath)/__group/cloudfoundry-$(cfOrg)-$(cfSpace)
       - name: password
@@ -54,7 +54,7 @@ spec:
             param: password
           - type: vaultSecret
             paths:
-              - $(vaultCustomBasePath)/cloudfoundry-$(cfOrg)-$(cfSpace)
+              - $(vaultPath)/cloudfoundry-$(cfOrg)-$(cfSpace)
               - $(vaultBasePath)/$(vaultPipelineName)/cloudfoundry-$(cfOrg)-$(cfSpace)
               - $(vaultBasePath)/__group/cloudfoundry-$(cfOrg)-$(cfSpace)
       - name: cfOrg
