--- a/resources/metadata/checkmarx.yaml
+++ b/resources/metadata/checkmarx.yaml
@@ -89,7 +89,7 @@ spec:
             paths:
               - $(vaultPath)/checkmarx
               - $(vaultBasePath)/$(vaultPipelineName)/checkmarx
-              - $(vaultBasePath)/__group/checkmarx
+              - $(vaultBasePath)/GROUP-SECRETS/checkmarx
       - name: preset
         type: string
         description: The preset to use for scanning, if not set explicitly the step will attempt to look up the project's setting based on the availability of `checkmarxCredentialsId`
@@ -172,7 +172,7 @@ spec:
             paths:
               - $(vaultPath)/checkmarx
               - $(vaultBasePath)/$(vaultPipelineName)/checkmarx
-              - $(vaultBasePath)/__group/checkmarx
+              - $(vaultBasePath)/GROUP-SECRETS/checkmarx
       - name: verifyOnly
         type: bool
         description: Whether the step shall only apply verification checks or whether it does a full scan and check cycle
