--- a/resources/metadata/fortify.yaml
+++ b/resources/metadata/fortify.yaml
@@ -46,7 +46,7 @@ spec:
             paths:
               - $(vaultPath)/fortify
               - $(vaultBasePath)/$(vaultPipelineName)/fortify
-              - $(vaultBasePath)/__group/fortify
+              - $(vaultBasePath)/GROUP-SECRETS/fortify
       - name: githubToken
         description: "GitHub personal access token as per
           https://help.github.com/en/github/authenticating-to-github/creating-a-personal-access-token-for-the-command-line"
