--- a/documentation/mkdocs.yml
+++ b/documentation/mkdocs.yml
@@ -42,7 +42,7 @@ nav:
             - 'Cloud Qualities': pipelines/cloud-sdk/cloud-qualities.md
     - 'Scenarios':
         - 'Build and Deploy Hybrid Applications with SAP Solution Manager': scenarios/changeManagement.md
-        - 'Build and Deploy SAP UI5 or SAP Fiori Applications on SAP Cloud Platform with Jenkins': scenarios/ui5-sap-cp/Readme.md
+        - 'Build and Deploy SAPUI5/SAP Fiori Applications on SAP Cloud Platform': scenarios/ui5-sap-cp/Readme.md
         - 'Build and Deploy SAP Cloud Application Programming Model Applications': scenarios/CAP_Scenario.md
         - 'Integrate SAP Cloud Platform Transport Management Into Your CI/CD Pipeline': scenarios/TMS_Extension.md
         - 'Build and Deploy SAP Fiori Applications on SAP HANA XS Advanced': scenarios/xsa-deploy/Readme.md
