--- a/resources/metadata/sonar.yaml
+++ b/resources/metadata/sonar.yaml
@@ -63,7 +63,7 @@ spec:
       - name: sonarScannerDownloadUrl
         type: string
         description: "URL to the sonar-scanner-cli archive."
-        default: "https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.4.0.2170-linux.zip"
+        default: "https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.5.0.2216-linux.zip"
         scope:
           - PARAMETERS
           - STAGES
@@ -248,4 +248,4 @@ spec:
               - name: sonar
   containers:
     - name: sonar
-      image: node:lts-stretch
+      image: sonarsource/sonar-scanner-cli:4.5
