--- a/resources/metadata/checkmarx.yaml
+++ b/resources/metadata/checkmarx.yaml
@@ -297,6 +297,7 @@ spec:
               - name: lines_of_code_scanned
                 type: int
               - name: files_scanned
+                type: int
               - name: checkmarx_version
               - name: scan_type
               - name: preset
