feat(influx): handle data types of non-string fields (#2132)
* add type to sonar field

* respect type of influx fields

* update generated code

* switch type

* copy changes from #1885

* log JSON data

* read simple values from json

* Update InfluxData.groovy

* Revert "Update InfluxData.groovy"

This reverts commit c8cfdf381f5f84eec1a0b061ec81111481f04ca7.

* Revert "read simple values from json"

This reverts commit 94b69866d249aa90def88f397fba016ac858e866.

* Revert "copy changes from #1885"

This reverts commit 2471b4475ee7842b8adcc621e2483bd05623eb34.

* update TODO

--- a/resources/metadata/sonar.yaml
+++ b/resources/metadata/sonar.yaml
@@ -251,6 +251,7 @@ spec:
           - name: step_data
             fields:
               - name: sonar
+                type: bool
   containers:
     - name: sonar
       image: sonarsource/sonar-scanner-cli:4.5
