Default value for strategy added and remove pull config check

--- a/resources/com.sap.piper/pipeline/abapStageDefaults.yml
+++ b/resources/com.sap.piper/pipeline/abapStageDefaults.yml
@@ -2,7 +2,7 @@ stages:
   Init: {}
   Initial Checks: {}
   Prepare System: {}
-  Clone Repositories: {}
+  Clone Repositories: {strategy:"Pull"}
   ATC: {}
   Build: {}
   Integration Tests: {}
