corrected stage default

--- a/resources/com.sap.piper/pipeline/abapStageDefaults.yml
+++ b/resources/com.sap.piper/pipeline/abapStageDefaults.yml
@@ -2,7 +2,8 @@ stages:
   Init: {}
   Initial Checks: {}
   Prepare System: {}
-  Clone Repositories: {strategy:"Pull"}
+  Clone Repositories:
+    strategy: 'Pull'
   ATC: {}
   Build: {}
   Integration Tests: {}
