Updates long description

--- a/resources/metadata/gitopsUpdateDeployment.yaml
+++ b/resources/metadata/gitopsUpdateDeployment.yaml
@@ -5,6 +5,8 @@ metadata:
     This step allows you to update the deployment manifest for Kubernetes in a git repository.
 
     It can for example be used for GitOps scenarios where the update of the manifests triggers an update of the corresponding deployment in Kubernetes.
+
+    As of today, it supports the update of deployment yaml files via kubectl patch. The container inside the yaml must be described within the following hirarchy: {"spec":{"template":{"spec":{"containers":[{...}]}}}}
 spec:
   inputs:
     secrets:
