--- a/resources/metadata/gitopsUpdateDeployment.yaml
+++ b/resources/metadata/gitopsUpdateDeployment.yaml
@@ -6,7 +6,7 @@ metadata:
 
     It can for example be used for GitOps scenarios where the update of the manifests triggers an update of the corresponding deployment in Kubernetes.
 
-    As of today, it supports the update of deployment yaml files via kubectl patch. The container inside the yaml must be described within the following hirarchy: {"spec":{"template":{"spec":{"containers":[{...}]}}}}
+    As of today, it supports the update of deployment yaml files via kubectl patch. The container inside the yaml must be described within the following hierarchy: {"spec":{"template":{"spec":{"containers":[{...}]}}}}
 spec:
   inputs:
     secrets:
