--- a/resources/com.sap.piper/pipeline/abapStageDefaults.yml
+++ b/resources/com.sap.piper/pipeline/abapStageDefaults.yml
@@ -6,7 +6,7 @@ stages:
   ATC: {}
   Build: {}
   Integration Tests:
-    confirmDeletion: false
+    confirmDeletion: true
   Confirm: {}
   Publish: {}
   Post:
