adds general to container image

--- a/resources/metadata/gitopsUpdateDeployment.yaml
+++ b/resources/metadata/gitopsUpdateDeployment.yaml
@@ -109,6 +109,7 @@ spec:
           - name: commonPipelineEnvironment
             param: container/imageNameTag
         scope:
+          - GENERAL
           - PARAMETERS
           - STAGES
           - STEPS
