--- a/resources/metadata/gitopsUpdateDeployment.yaml
+++ b/resources/metadata/gitopsUpdateDeployment.yaml
@@ -114,6 +114,7 @@ spec:
           - STEPS
   containers:
     - image: dtzar/helm-kubectl:2.12.1
+      workingDir: /config
       options:
         - name: -u
           value: "0"
