--- a/resources/com.sap.piper/pipeline/cloudSdkLegacyConfigSettings.yml
+++ b/resources/com.sap.piper/pipeline/cloudSdkLegacyConfigSettings.yml
@@ -62,8 +62,10 @@ removedOrReplacedSteps:
       The extension must pass all required options to the step via parameters, it cannot be configured in your .pipeline/config.yml."
 
 removedOrReplacedStages:
-  integrationTests:
-    newStageName: "backendIntegrationTests"
+  backendIntegrationTests:
+    newStageName: "integration"
+  frontendIntegrationTests:
+    newStageName: "integration"
   staticCodeChecks:
     customMessage: "Since version v32 it is required to migrate the configuration into your pom.xml file or to the configuration of the new step mavenExecuteStaticCodeChecks.
       Details can be found in the release notes as well as in the step documentation: https://sap.github.io/jenkins-library/steps/mavenExecuteStaticCodeChecks/."
