Recover overwritten entry

--- a/resources/com.sap.piper/pipeline/cloudSdkLegacyConfigSettings.yml
+++ b/resources/com.sap.piper/pipeline/cloudSdkLegacyConfigSettings.yml
@@ -62,6 +62,8 @@ removedOrReplacedSteps:
       The extension must pass all required options to the step via parameters, it cannot be configured in your .pipeline/config.yml."
 
 removedOrReplacedStages:
+  integrationTests:
+    newStageName: "integration"
   backendIntegrationTests:
     newStageName: "integration"
   frontendIntegrationTests:
