--- a/resources/metadata/gitopsUpdateDeployment.yaml
+++ b/resources/metadata/gitopsUpdateDeployment.yaml
@@ -112,9 +112,82 @@ spec:
         resourceRef:
           - name: commonPipelineEnvironment
             param: container/imageNameTag
+      - name: chartPath
+        aliases:
+          - name: helmChartPath
+        type: string
+        description: Defines the chart path for deployments using helm.
+        scope:
+          - PARAMETERS
+          - STAGES
+          - STEPS
+      - name: helmAdditionalValueFile
+        description: File path to additional values that shall be used
+        scope:
+          - PARAMETERS
+          - STAGES
+          - STEPS
+        type: string
+      - name: helmValueForRespositoryAndImageName
+        description: value description used in the template to specify the repository and image name of the deployment
+        longDescription: The whole value before the colon sign.
+        scope:
+          - PARAMETERS
+          - STAGES
+          - STEPS
+        type: string
+      - name: helmValueForImageVersion
+        description: value description used in the template to specify the version of the deployment
+        longDescription: The whole value after the colon sign.
+        scope:
+          - PARAMETERS
+          - STAGES
+          - STEPS
+        type: string
+      - name: deploymentName
+        aliases:
+          - name: helmDeploymentName
+        type: string
+        description: Defines the name of the deployment.
+        scope:
+          - PARAMETERS
+          - STAGES
+          - STEPS
+        conditions:
+          - conditionRef: strings-equal
+            params:
+              - name: deployTool
+                value: kubectl
+      - name: deployTool
+        type: string
+        description: Defines the tool which should be used for deployment.
+        mandatory: true
+        scope:
+          - PARAMETERS
+          - STAGES
+          - STEPS
+        default: kubectl
+        possibleValues:
+          - kubectl
+          - helm
   containers:
     - image: dtzar/helm-kubectl:2.12.1
       workingDir: /config
       options:
         - name: -u
           value: "0"
+      conditions:
+        - conditionRef: strings-equal
+          params:
+            - name: deployTool
+              value: helm
+    - image: dtzar/helm-kubectl:2.12.1
+      workingDir: /config
+      options:
+        - name: -u
+          value: "0"
+      conditions:
+        - conditionRef: strings-equal
+          params:
+            - name: deployTool
+              value: kubectl
