Change defaultimage for npmExecuteLint

--- a/resources/metadata/npmExecuteLint.yaml
+++ b/resources/metadata/npmExecuteLint.yaml
@@ -31,5 +31,5 @@ spec:
           - name: npm/defaultNpmRegistry
   containers:
     - name: node
-      image: node:12-buster-slim
+      image: node:12-buster
       imagePullPolicy: Never
