--- a/.github/workflows/release-go.yml
+++ b/.github/workflows/release-go.yml
@@ -17,6 +17,7 @@ jobs:
           cp ./piper_master ./piper
           npm install semver --quiet
           echo "::set-env name=PIPER_version::v$(node_modules/.bin/semver -i minor $(curl --silent "https://api.github.com/repos/$GITHUB_REPOSITORY/releases/latest" | jq -r .tag_name))"
+          echo "PIPER_version=v$(node_modules/.bin/semver -i minor $(curl --silent "https://api.github.com/repos/$GITHUB_REPOSITORY/releases/latest" | jq -r .tag_name))" >> $GITHUB_ENV
       - uses: SAP/project-piper-action@master
         with:
           piper-version: master
