--- a/resources/metadata/mavenStaticCodeChecks.yaml
+++ b/resources/metadata/mavenStaticCodeChecks.yaml
@@ -128,6 +128,16 @@ spec:
         default: false
         aliases:
           - name: maven/logSuccessfulMavenTransfers
+      - name: installArtifacts
+        type: bool
+        description:
+          "If enabled, it will install all artifacts to the local maven repository to make them available before running the tests.
+             This is required if the integration test module has dependencies to other modules in the repository and they were not installed before."
+        scope:
+          - GENERAL
+          - STEPS
+          - STAGES
+          - PARAMETERS
 
   containers:
     - name: mvn
