--- a/resources/metadata/mavenStaticCodeChecks.yaml
+++ b/resources/metadata/mavenStaticCodeChecks.yaml
@@ -131,8 +131,8 @@ spec:
       - name: installArtifacts
         type: bool
         description:
-          "If enabled, it will install all artifacts to the local maven repository to make them available before running the tests.
-             This is required if the integration test module has dependencies to other modules in the repository and they were not installed before."
+          "If enabled, it will install all artifacts to the local maven repository to make them available before running the static code checks.
+             This is required if any maven module has dependencies to other modules in the repository and they were not installed before."
         scope:
           - GENERAL
           - STEPS
