Add default stashes again

--- a/resources/metadata/npmExecuteScripts.yaml
+++ b/resources/metadata/npmExecuteScripts.yaml
@@ -8,7 +8,9 @@ metadata:
 spec:
   inputs:
     resources:
-      - name: ''
+      - name: buildDescriptor
+        type: stash
+      - name: tests
         type: stash
     params:
       - name: install
