--- a/resources/metadata/abapEnvironmentCreateSystem.yaml
+++ b/resources/metadata/abapEnvironmentCreateSystem.yaml
@@ -105,7 +105,7 @@ spec:
         mandatory: false
         aliases:
           - name: cloudFoundry/servicePlan
-      - name: cfServiceInstanceName
+      - name: cfServiceInstance
         type: string
         description: Parameter for naming the Service Instance when creating a Cloud Foundry Service
         scope:
@@ -115,18 +115,7 @@ spec:
           - GENERAL
         mandatory: false
         aliases:
-          - name: cloudFoundry/serviceInstanceName
-      - name: cfServiceBroker
-        type: string
-        description: Parameter for Service Broker to be used when creating a Cloud Foundry Service
-        scope:
-          - PARAMETERS
-          - STAGES
-          - STEPS
-          - GENERAL
-        mandatory: false
-        aliases:
-          - name: cloudFoundry/serviceBroker
+          - name: cloudFoundry/serviceInstance
       - name: serviceManifest
         type: string
         description: Path to Cloud Foundry Service Manifest in YAML format for multiple service creations that are being passed to a Create-Service-Push Cloud Foundry cli plugin
@@ -139,7 +128,6 @@ spec:
         aliases:
           - name: cloudFoundry/serviceManifest
           - name: cfServiceManifest
-        default: "service-manifest.yml"
       - name: adminEmail
         type: string
         scope:
@@ -178,7 +166,6 @@ spec:
           - STAGES
           - STEPS
           - GENERAL
-        default: 4
       - name: sizeOfRuntime
         type: int
         scope:
@@ -186,7 +173,6 @@ spec:
           - STAGES
           - STEPS
           - GENERAL
-        default: 1
       - name: addonDescriptor
         type: string
         scope:
