--- a/resources/com.sap.piper/pipeline/abapStageDefaults.yml
+++ b/resources/com.sap.piper/pipeline/abapStageDefaults.yml
@@ -2,8 +2,7 @@ stages:
   Init: {}
   Initial Checks: {}
   Prepare System: {}
-  Clone Repositories:
-    strategy: 'Pull'
+  Clone Repositories: {}
   ATC: {}
   Build: {}
   Integration Tests: {}
