Rename parameter "testModule" to "pomPath"

--- a/resources/com.sap.piper/pipeline/cloudSdkStageDefaults.yml
+++ b/resources/com.sap.piper/pipeline/cloudSdkStageDefaults.yml
@@ -56,7 +56,7 @@ stages:
   performanceTests:
     stepConditions:
       gatlingExecuteTests:
-        filePatternFromConfig: 'testModule'
+        filePatternFromConfig: 'pomPath'
         configKeys:
           - 'appUrls'
       performanceTests:
